force-app/main/default/objects/Contract_Compliance__c/Contract_Compliance__c.object-meta.xml
<CustomObject>
    <label>Contract Compliance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Compliance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>