force-app/main/default/objects/Contract_Compliance__c/fields/Achieved_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Achieved_To_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Achieved To Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>