force-app/main/default/objects/Contract_Compliance__c/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compliant</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>