force-app/main/default/objects/Contract_Compliance__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Measure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>