force-app/main/default/objects/Contract_Compliance__c/fields/Measurement_Period__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Measurement Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>