force-app/main/default/objects/Contract_Compliance__c/fields/Measurement_Type__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Measurement Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>