force-app/main/default/objects/Contract_Compliance__c/fields/Over_Under_Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_Forecasted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Over/(Under) Forecasted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>