force-app/main/default/objects/Contract_Compliance__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>