force-app/main/default/objects/Contract_Compliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contract_ID__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Measurement_Period__c</columns>
    <columns>Measurement_Type__c</columns>
    <columns>Measure__c</columns>
    <columns>Target__c</columns>
    <columns>Achieved_To_Date__c</columns>
    <columns>Over_Under_Forecasted__c</columns>
    <columns>Compliant__c</columns>
    <columns>Owner__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>